--- a/.github/workflows/frontend:lint.yml
+++ b/.github/workflows/frontend:lint.yml
@@ -1,8 +1,8 @@
 ---
 on:
-  push:
+  pull_request:
     paths:
-      - '.github/workflows/frontend.yml'
+      - '.github/workflows/frontend:lint.yml'
       - 'frontend/**'
       - '.eslintignore'
       - '.eslintrc.js'
