--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,6 +1,6 @@
 {
   "extends": ["config:base"],
-  "schedule": ["after 10pm and before 5am on every weekday", "every weekend"],
+  "enabledManagers": ["gradle"],
   "labels": ["dependencies", "automerge"],
   "packageRules": [
     {
